Fix alignmnent for smaller screen

--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -9,11 +9,17 @@
 	background: #E9F2ED;
 }
 
+.header {
+    border: solid;
+    width: 100%;
+    height: 50px;
+}
+
 .background_images {
     max-width: 1280px;
     max-height: 827px;
     width: 98%;
-    margin-bottom: 120px;
+    margin: 0px 0 60px 0;
     border: solid;
 }
 
